<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.maldonadopato91.com.contactotarea.MainActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:gravity="center_horizontal">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_completo"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etNombre">

        </android.support.design.widget.TextInputEditText>


    </android.support.design.widget.TextInputLayout>

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="204dp"
        android:id="@+id/dpFechaNacimiento"
        android:layout_weight="0.25"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/etTelefono">
        </android.support.design.widget.TextInputEditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etEmail">
        </android.support.design.widget.TextInputEditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripContacto"
            android:id="@+id/etDescripContacto">
        </android.support.design.widget.TextInputEditText>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"
        android:id="@+id/btnSiguiente"
        android:layout_marginTop="70dp"
        android:onClick="SiguienteActividad" />


</LinearLayout>
